fix: :bug: add a gap so it works better in tablet

--- a/wwwroot/css/Profile.css
+++ b/wwwroot/css/Profile.css
@@ -96,6 +96,7 @@
 .meta-data {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 1.5rem;
     width: 100%;
     justify-content: space-evenly;
     margin-top: 1rem;
